<resources>
    <string name="app_name">Insorma</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address_hint">example123@company.com</string>
    <string name="password_hint">13RedPanda!</string>
    <string name="phone_number_hint">0812345678</string>
    <string name="username_hint">username</string>
    <string name="login_button">Login</string>
    <string name="register_button">Sign up</string>
    <string name="to_login_button">Back to Login</string>
    <string name="furniture_detail_more">More..</string>
    <string name="furniture_detail_buy">Buy</string>
    <string name="furniture_detail_text_quantity">Quantity : </string>
    <string name="one_number">2</string>
    <string name="zero">0</string>
    <string name="transaction_id">Transaction ID : </string>
    <string name="date">Date : </string>
    <string name="price">Price : </string>
    <string name="furniture_name">Furniture Name : </string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete_account">Delete Account</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_about">AboutActivity</string>
</resources>