<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign.RegisterFragment">

    <EditText
        android:id="@+id/register_email_address"
        android:layout_width="234dp"
        android:layout_height="44dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="40dp"
        android:hint="@string/email_address_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="234dp"
        android:layout_height="44dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="24dp"
        android:hint="@string/username_hint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_address" />

    <EditText
        android:id="@+id/register_phone_number"
        android:layout_width="234dp"
        android:layout_height="44dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="24dp"
        android:hint="@string/phone_number_hint"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_username" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="234dp"
        android:layout_height="44dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="24dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_phone_number" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="20dp"
        android:hint="@string/register_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

    <Button
        android:id="@+id/redirect_to_login_button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:hint="@string/to_login_button"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/register_button"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

</androidx.constraintlayout.widget.ConstraintLayout>

