<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.ProfileFragment">

    <TextView
        android:id="@+id/profile_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/profile_username_frame_layout"
        android:layout_width="108dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="7dp" />

        <EditText
            android:id="@+id/profile_edit_username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:hint="@string/username_hint"
            android:visibility="invisible" />

    </FrameLayout>

    <TextView
        android:id="@+id/profile_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_username_frame_layout" />

    <FrameLayout
        android:id="@+id/profile_edit_save_frame_layout"
        android:layout_width="93dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_phone_number">

        <Button
            android:id="@+id/profile_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit" />

        <Button
            android:id="@+id/profile_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/save" />

    </FrameLayout>

    <Button
        android:id="@+id/profile_delete_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/delete_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_save_frame_layout" />

    <Button
        android:id="@+id/profile_log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/log_out"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_delete_account" />


</androidx.constraintlayout.widget.ConstraintLayout>