<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.FurnitureDetailFragment">

    <ImageView
        android:id="@+id/furniture_detail_image"
        android:layout_width="202dp"
        android:layout_height="161dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/furniture_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/furniture_detail_image" />

    <TextView
        android:id="@+id/furniture_detail_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/furniture_detail_title" />

    <TextView
        android:id="@+id/furniture_detail_text_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="8dp"
        android:text="@string/furniture_detail_text_quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/furniture_detail_price" />
    <!--    android:id="@+id/furniture_detail_quantity"-->

    <EditText
        android:id="@+id/furniture_detail_quantity"
        android:layout_width="112dp"
        android:layout_height="44dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="76dp"
        android:hint="@string/one_number"
        android:text="@string/zero"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/furniture_detail_text_quantity"
        app:layout_constraintTop_toBottomOf="@+id/furniture_detail_image" />

    <Button
        android:id="@+id/furniture_detail_buy_button"
        android:layout_width="96dp"
        android:layout_height="34dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="20dp"
        android:text="@string/furniture_detail_buy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/furniture_detail_text_quantity" />

</androidx.constraintlayout.widget.ConstraintLayout>